--- a/.github/workflows/depoy_verification_sdk_to_nuget.yml
+++ b/.github/workflows/depoy_verification_sdk_to_nuget.yml
@@ -6,7 +6,7 @@ on:
     - 'v*'
 
 env:
-  PROJECT_PATH: './Fig.Api.SettingVerification.Sdk/Fig.Api.SettingVerification.Sdk.csproj'
+  PROJECT_PATH: './Fig.Api.SettingVerification.Sdk/Fig.Api.SettingVerification.Sdk/Fig.Api.SettingVerification.Sdk.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 
