Updated referenced image path

--- a/Fig.Api.Settingverification.Sdk/Fig.Api.SettingVerification.Sdk/Fig.Api.SettingVerification.Sdk.csproj
+++ b/Fig.Api.Settingverification.Sdk/Fig.Api.SettingVerification.Sdk/Fig.Api.SettingVerification.Sdk.csproj
@@ -20,7 +20,7 @@
         <MinVerTagPrefix>v</MinVerTagPrefix>
     </PropertyGroup>
     <ItemGroup>
-        <None Include="..\resources\image\fig_logo_only_200x200.png" Pack="true" PackagePath="\" />
+        <None Include="..\..\resources\image\fig_logo_only_200x200.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
